@@ -121,13 +121,15 @@ static std::array<bool, NUM_COVERAGE_TICKS> tick_coverage;
 // only throttle due to tick_coverage at most once per season tick to avoid clustering
 static bool season_tick_throttled = false;
 
+static const int32_t TICKS_PER_YEAR = 403200;
+
 static void register_birthday(df::unit * unit) {
-    auto & btick = unit->birth_time;
-    if (btick < 0)
+    int32_t btick = unit->birth_time;
+    if (btick < 0 || btick > TICKS_PER_YEAR)
         return;
-    for (size_t tick=btick; tick >= 0; --tick) {
-        if (birthday_triggers.size() <= tick)
-            birthday_triggers.resize(btick-1, INT32_MAX);
+    if (birthday_triggers.size() <= (size_t)btick)
+        birthday_triggers.resize(btick+1, INT32_MAX);
+    for (int32_t tick=btick; tick >= 0; --tick) {
         if (birthday_triggers[tick] > btick)
             birthday_triggers[tick] = btick;
         else
@@ -286,7 +288,7 @@ static int32_t get_next_trigger_year_tick(int32_t next_tick) {
 }
 
 static int32_t get_next_birthday(int32_t next_tick) {
-    if (next_tick >= (int32_t)birthday_triggers.size())
+    if (next_tick < 0 || next_tick >= (int32_t)birthday_triggers.size())
         return INT32_MAX;
     return birthday_triggers[next_tick];
 }
